// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders line items correctly, on initial load 1`] = `
<div
  className="c-line-items"
>
  <div
    className="o-grid-container__lineitems"
    key="1"
  >
    <div
      className="o-grid-item1__lineitems"
    >
      <Link
        as="undefined"
        href="/slug?slug=1"
        key="1"
      >
        <Image
          alt="test"
          aria-label="test"
          className="c-line-items__image"
          key="1"
          src="https://staging-matalanintegration-1452506760.s3.amazonaws.com/uploads/asset_file/asset_file/12917/S2623404_C146_Main.jpg"
        />
      </Link>
    </div>
    <React.Fragment>
      <div
        className="o-grid-item2__lineitems"
      >
        <div
          className="c-line-items__details"
        >
          <h4
            className="c-line-items__details-title  u-bold"
          >
            test
          </h4>
          <div
            className="c-line-items__details-sku"
          >
            <span>
              123
            </span>
          </div>
        </div>
      </div>
    </React.Fragment>
    <React.Fragment>
      <div
        className="o-grid-item3__lineitems"
      >
        <div
          className="c-line-items__colour  u-bold"
        >
          <span>
            Colour
          </span>
        </div>
        <div
          className="c-line-items__size  u-bold"
        >
          <span>
            Option
          </span>
        </div>
        <div
          className="c-line-items__quantity u-bold"
        >
          <span>
            Quantity
          </span>
        </div>
      </div>
      <div
        className="o-grid-item4__lineitems"
      >
        <span
          className="c-line-items__space"
        >
          Grey
        </span>
        <span
          className="c-line-items__space"
        >
          38 Waist 31 Leg
        </span>
        <span
          className="c-line-items__space"
        >
          <select
            data-variant="123"
            onChange={[Function]}
            value={2}
          >
            <option
              aria-posinset={2}
              aria-setsize={1}
              key="1"
              value={1}
            >
              1
            </option>
            <option
              aria-posinset={3}
              aria-setsize={2}
              key="2"
              value={2}
            >
              2
            </option>
            <option
              aria-posinset={4}
              aria-setsize={3}
              key="3"
              value={3}
            >
              3
            </option>
            <option
              aria-posinset={5}
              aria-setsize={4}
              key="4"
              value={4}
            >
              4
            </option>
            <option
              aria-posinset={6}
              aria-setsize={5}
              key="5"
              value={5}
            >
              5
            </option>
            <option
              aria-posinset={7}
              aria-setsize={6}
              key="6"
              value={6}
            >
              6
            </option>
            <option
              aria-posinset={8}
              aria-setsize={7}
              key="7"
              value={7}
            >
              7
            </option>
            <option
              aria-posinset={9}
              aria-setsize={8}
              key="8"
              value={8}
            >
              8
            </option>
            <option
              aria-posinset={10}
              aria-setsize={9}
              key="9"
              value={9}
            >
              9
            </option>
            <option
              aria-posinset={11}
              aria-setsize={10}
              key="10"
              value={10}
            >
              10
            </option>
          </select>
        </span>
      </div>
    </React.Fragment>
    <React.Fragment>
      <div
        className="o-grid-item5__lineitems"
      >
        <div
          className="c-line-items__buttons"
        >
          <div
            className="c-line-items__anchor"
          >
            <a
              className="c-line-items__delete"
              data-variant="123"
            >
              Delete
            </a>
          </div>
        </div>
        <div
          className="c-line-items__total-wrapper"
        >
          <a
            className="c-line-items__total"
          >
            £
            20.00
          </a>
        </div>
      </div>
    </React.Fragment>
  </div>
</div>
`;

exports[`trigger updateQuantity function, on change of line item quantity 1`] = `
<div
  className="c-line-items"
>
  <div
    className="o-grid-container__lineitems"
    key="1"
  >
    <div
      className="o-grid-item1__lineitems"
    >
      <Link
        as="undefined"
        href="/slug?slug=1"
        key="1"
      >
        <Image
          alt="test"
          aria-label="test"
          className="c-line-items__image"
          key="1"
          src="https://staging-matalanintegration-1452506760.s3.amazonaws.com/uploads/asset_file/asset_file/12917/S2623404_C146_Main.jpg"
        />
      </Link>
    </div>
    <React.Fragment>
      <div
        className="o-grid-item2__lineitems"
      >
        <div
          className="c-line-items__details"
        >
          <h4
            className="c-line-items__details-title  u-bold"
          >
            test
          </h4>
          <div
            className="c-line-items__details-sku"
          >
            <span>
              123
            </span>
          </div>
        </div>
      </div>
    </React.Fragment>
    <React.Fragment>
      <div
        className="o-grid-item3__lineitems"
      >
        <div
          className="c-line-items__colour  u-bold"
        >
          <span>
            Colour
          </span>
        </div>
        <div
          className="c-line-items__size  u-bold"
        >
          <span>
            Option
          </span>
        </div>
        <div
          className="c-line-items__quantity u-bold"
        >
          <span>
            Quantity
          </span>
        </div>
      </div>
      <div
        className="o-grid-item4__lineitems"
      >
        <span
          className="c-line-items__space"
        >
          Grey
        </span>
        <span
          className="c-line-items__space"
        >
          38 Waist 31 Leg
        </span>
        <span
          className="c-line-items__space"
        >
          <select
            data-variant="123"
            onChange={
              [MockFunction] {
                "calls": Array [
                  Array [
                    Object {
                      "target": Object {
                        "value": 3,
                      },
                    },
                  ],
                ],
              }
            }
            value={2}
          >
            <option
              aria-posinset={2}
              aria-setsize={1}
              key="1"
              value={1}
            >
              1
            </option>
            <option
              aria-posinset={3}
              aria-setsize={2}
              key="2"
              value={2}
            >
              2
            </option>
            <option
              aria-posinset={4}
              aria-setsize={3}
              key="3"
              value={3}
            >
              3
            </option>
            <option
              aria-posinset={5}
              aria-setsize={4}
              key="4"
              value={4}
            >
              4
            </option>
            <option
              aria-posinset={6}
              aria-setsize={5}
              key="5"
              value={5}
            >
              5
            </option>
            <option
              aria-posinset={7}
              aria-setsize={6}
              key="6"
              value={6}
            >
              6
            </option>
            <option
              aria-posinset={8}
              aria-setsize={7}
              key="7"
              value={7}
            >
              7
            </option>
            <option
              aria-posinset={9}
              aria-setsize={8}
              key="8"
              value={8}
            >
              8
            </option>
            <option
              aria-posinset={10}
              aria-setsize={9}
              key="9"
              value={9}
            >
              9
            </option>
            <option
              aria-posinset={11}
              aria-setsize={10}
              key="10"
              value={10}
            >
              10
            </option>
          </select>
        </span>
      </div>
    </React.Fragment>
    <React.Fragment>
      <div
        className="o-grid-item5__lineitems"
      >
        <div
          className="c-line-items__buttons"
        >
          <div
            className="c-line-items__anchor"
          >
            <a
              className="c-line-items__delete"
              data-variant="123"
            >
              Delete
            </a>
          </div>
        </div>
        <div
          className="c-line-items__total-wrapper"
        >
          <a
            className="c-line-items__total"
          >
            £
            20.00
          </a>
        </div>
      </div>
    </React.Fragment>
  </div>
</div>
`;
